styles.css
/* ... */
.chisel-rhythm .markdown-reading-view div div h3 {
  margin-top: calc(var(--margin) * 4);
  margin-bottom: calc(var(--margin) * 2);
  padding: 0;
}
.chisel-rhythm .markdown-reading-view div.el-h1 + div.el-h2 h2 {
  margin-top: var(--margin);
}
.chisel-rhythm .markdown-reading-view div.el-h2 + div.el-h3 h3 {
  margin-top: calc(var(--margin) * 4);
}
.chisel-rhythm .markdown-reading-view div.el-h3 + div.el-h4 h4 {
  margin-top: 0rlh;
}
.chisel-rhythm .markdown-reading-view div div h4 {
  margin-top: calc(var(--margin) * 4);
  margin-bottom: var(--margin);
  padding: 0;
}
.chisel-rhythm .markdown-reading-view div.el-h4 + div.el-h5 h5 {
  margin-top: 0rlh;
}
.chisel-rhythm .markdown-reading-view div div h5 {
  margin-top: calc(var(--margin) * 2);
  margin-bottom: var(--margin);
  padding: 0;
}
.chisel-rhythm .markdown-reading-view div div h6 {
  margin-top: calc(var(--margin) * 2);
  margin-bottom: 0rlh;
  padding: 0;
}
.chisel-rhythm .markdown-reading-view div.el-h6 + div blockquote {
  margin-top: var(--margin);
}

@media only screen and (max-width: 600px) {
  .chisel-rhythm .markdown-reading-view .callout,
  .chisel-rhythm .markdown-reading-view blockquote,
  .chisel-rhythm .markdown-reading-view pre {
    margin: calc(var(--margin) * 2) 0rlh !important;
  }
  .chisel-rhythm .inline-title {
    margin-bottom: calc(var(--margin) * 3);
    margin-top: var(--margin);
  }
  .chisel-rhythm .markdown-source-view .inline-title {
    margin-bottom: var(--margin);
  }
  .chisel-rhythm .markdown-reading-view ul,
.chisel-rhythm .markdown-reading-view ol,
.chisel-rhythm .markdown-reading-view .callout-content ul,
.chisel-rhythm .markdown-reading-view .callout-content ol {
    padding: 0rlh 0rlh 0rlh 0 calc(var(--margin) * 5);
  }
  .chisel-rhythm .markdown-reading-view hr {
    margin: calc(var(--margin) * 4) 25% !important;
  }
}
@media only screen and (min-width: 900px) {
  .chisel-rhythm .inline-title {
    margin-top: calc(var(--margin) * 4);
  }
}
/* Preview mode (reading view) */
.chisel-rhythm .markdown-reading-view h1 + h2,
.chisel-rhythm .markdown-reading-view h1 + h3,
.chisel-rhythm .markdown-reading-view h1 + h4,
.chisel-rhythm .markdown-reading-view h1 + h5,
.chisel-rhythm .markdown-reading-view h1 + h6,
.chisel-rhythm .HyperMD-header-1.cm-line + .HyperMD-header-2.cm-line,
.chisel-rhythm .HyperMD-header-1.cm-line + .HyperMD-header-3.cm-line,
.chisel-rhythm .HyperMD-header-1.cm-line + .HyperMD-header-4.cm-line,
.chisel-rhythm .HyperMD-header-1.cm-line + .HyperMD-header-5.cm-line,
.chisel-rhythm .HyperMD-header-1.cm-line + .HyperMD-header-6.cm-line {
  margin-top: calc(var(--margin) * 2);
}

.plugin-setting-tab .setting-item {
  margin-bottom: 1em; /* Adjust as needed */
}
/*# sourceMappingURL=styles.css.map */

